# renderdog

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  dist.yml  release.yml
crates/renderdog/: Cargo.toml  README.md
crates/renderdog-automation/: Cargo.toml  README.md  build.rs
crates/renderdog-automation/examples/: diagnose_environment.rs  export_actions_from_capture.rs  export_bundle_from_capture.rs  find_events.rs  one_shot_capture_export.rs  qrenderdoc_replay_pick_pixel.rs  replay_list_textures.rs  replay_pick_pixel.rs  replay_save_outputs_png.rs  replay_save_texture_png.rs
crates/renderdog-automation/scripts/: export_actions.py  export_actions_jsonl.py  export_bindings_index.py  export_bindings_index_jsonl.py  find_events.py  find_events_json.py  renderdog_action_query.py  renderdog_qrenderdoc.py  replay_list_textures.py  replay_list_textures_json.py  replay_pick_pixel.py  replay_pick_pixel_json.py  replay_save_outputs_png.py  replay_save_outputs_png_json.py  replay_save_texture_png.py  replay_save_texture_png_json.py  trigger_capture.py
crates/renderdog-automation/src/: capture.rs  command.rs  diagnostics.rs  lib.rs  normalize.rs  qrenderdoc_jobs.rs  renderdoccmd.rs  replay.rs  scripting.rs  toolchain.rs  ui.rs  version_policy.rs  workflows.rs
crates/renderdog-automation/src/workflows/: export_actions.rs  export_bindings_index.rs  export_bundle.rs  find_and_save_outputs.rs  find_events.rs  mod.rs  one_shot.rs  trigger_capture.rs  util.rs
crates/renderdog-mcp/: Cargo.toml  README.md
crates/renderdog-mcp/src/: main.rs  paths.rs  server.rs
crates/renderdog-mcp/src/server/: capture.rs  diagnostics.rs  export.rs  find.rs  mod.rs  replay.rs  workflows.rs
crates/renderdog-mcp/src/types/: capture.rs  defaults.rs  diagnostics.rs  export.rs  find.rs  mod.rs  replay.rs  workflows.rs
crates/renderdog-replay/: Cargo.toml  README.md  build.rs
crates/renderdog-replay-experimental/: Cargo.toml  README.md  build.rs
crates/renderdog-replay-experimental/examples/: replay_pick_pixel.rs
crates/renderdog-replay-experimental/include/: replay.h
crates/renderdog-replay-experimental/src/: ffi.rs  lib.rs  replay.cc
crates/renderdog-replay/examples/: cxx_replay_pick_pixel.rs  replay_pick_pixel.rs
crates/renderdog-replay/include/: renderdoc_runtime_api.h  replay.h
crates/renderdog-replay/src/: ffi.rs  lib.rs  replay.cc  version_policy.rs
crates/renderdog-sys/: Cargo.toml  README.md  build.rs
crates/renderdog-sys/src/: bindings_pregenerated.rs  lib.rs  version.rs
crates/renderdog-winit/: Cargo.toml  README.md
crates/renderdog-winit/examples/: winit_hotkey_capture.rs
crates/renderdog-winit/src/: lib.rs
crates/renderdog/examples/: in_app_capture.rs  in_app_injected_only.rs  in_app_options_overlay.rs
crates/renderdog/src/: annotations.rs  in_app.rs  lib.rs  renderdog.rs  settings.rs
docs/playbooks/: fret-clip-mask.md
scripts/: regen_bindings.py
