[workspace]
members = [
    "crates/renderdog",
    "crates/renderdog-automation",
    "crates/renderdog-mcp",
    "crates/renderdog-replay-experimental",
    "crates/renderdog-sys",
    "crates/renderdog-winit",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/renderdog"
homepage = "https://github.com/Latias94/renderdog"
readme = "README.md"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
