[package]
name = "renderdog-automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Out-of-process automation helpers for RenderDoc (renderdoccmd/qrenderdoc --python workflows)."
readme = "README.md"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

[dev-dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
