[package]
name = "renderdog-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server exposing RenderDoc automation workflows (capture/export/diagnostics)."
readme = "README.md"

[dependencies]
renderdog-automation = { version = "0.1.0", path = "../renderdog-automation" }
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
