[package]
name = "renderdog-replay"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
publish = false
description = "Experimental RenderDoc replay bindings (C++/cxx). Not for crates.io yet."

[dependencies]
cxx = "1.0"
thiserror = "2"
anyhow = "1"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
# Enable building the C++ shim and calling RenderDoc's replay API (experimental).
cxx-replay = []

[[example]]
name = "replay_pick_pixel"
path = "examples/replay_pick_pixel.rs"
required-features = ["cxx-replay"]
