[package]
name = "renderdog-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Optional winit helpers for renderdog (key mapping + window handle helpers)."
readme = "README.md"

[dependencies]
renderdog = { version = "0.1.0", path = "../renderdog" }
winit = "0.30"
raw-window-handle = "0.6"
