[package]
name = "renderdog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "RenderDoc in-application API wrapper + automation helpers + an MCP server."
keywords = ["renderdoc", "graphics", "debugging", "mcp"]
categories = ["api-bindings", "development-tools::debugging", "graphics"]

[dependencies]
thiserror = "2"
renderdog-sys = { version = "0.1.0", path = "../renderdog-sys" }
bitflags = "2.10.0"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
libc = "0.2"
